# sway-out

./: .copier-answers.yml  .envrc  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  Justfile  flake.nix  mkdocs.yml  opencode.json  pyproject.toml
.github/workflows/: linting.yml  nix-flake.yml  packaging.yml  testing.yml
docs/reference/: sway_out.applications.md  sway_out.connection.md  sway_out.layout.md  sway_out.layout_creation.md  sway_out.layout_files.md  sway_out.layouts.md  sway_out.main.md  sway_out.marks.md  sway_out.matching.md  sway_out.notifications.md  sway_out.outputs.md  sway_out.utils.md
src/sway_out/: __init__.py  applications.py  client.py  connection.py  layout.py  layout_creation.py  layout_files.py  layouts.py  main.py  marks.py  matching.py  notifications.py  outputs.py  utils.py
src/sway_out/stubs/: i3ipc.pyi
